my_es_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elasticsearch
  namespace: openshift-logging
spec:
  host:
  to:
    kind: Service
    name: elasticsearch
  tls:
    termination: reencrypt
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFKTCCAxGgAwIBAgIJAJO7TXsoCd+lMA0GCSqGSIb3DQEBCwUAMCsxKTAnBgNV
[...]
      9Vx33p+p9uZywoJgtDqNC+VMn+EKHdMaLD1d7Bc=
      -----END CERTIFICATE-----
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFKTCCAxGgAwIBAgIJAJO7TXsoCd+lMA0GCSqGSIb3DQEBCwUAMCsxKTAnBgNV
[...]
      9Vx33p+p9uZywoJgtDqNC+VMn+EKHdMaLD1d7Bc=
      -----END CERTIFICATE-----
